--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -196,7 +196,13 @@
                         <div class="guidelines-box">
                             <h4><i class="fas fa-upload"></i> Submission Method</h4>
                             <p>Online submission via the conference website or on-site registration</p>
-                            <p><strong>Conference Website:</strong> <em>(To be announced)</em></p>
+                            <p>
+                                <strong>Conference Website:</strong>
+                                <a href="#" id="conferenceWebsiteLink" class="submission-link">
+                                    <i class="fas fa-arrow-up-right-from-square"></i>
+                                    <span>Access the submission portal</span>
+                                </a>
+                            </p>
                         </div>
 
                         <div class="guidelines-box">
@@ -361,6 +367,32 @@
                 btnText.textContent = 'Submit Your Abstract';
             }
         });
+
+        const conferenceWebsiteLink = document.getElementById('conferenceWebsiteLink');
+        if (conferenceWebsiteLink) {
+            conferenceWebsiteLink.addEventListener('click', async function(event) {
+                event.preventDefault();
+
+                try {
+                    const response = await fetch('/api/auth/me', {
+                        credentials: 'include'
+                    });
+
+                    if (response.ok) {
+                        const data = await response.json();
+                        if (data.success && data.user) {
+                            window.location.href = 'profile.html';
+                            return;
+                        }
+                    }
+
+                    window.location.href = 'login.html';
+                } catch (error) {
+                    console.error('Check login status failed:', error);
+                    window.location.href = 'login.html';
+                }
+            });
+        }
     </script>
 </body>
 </html>
