--- a/index.html
+++ b/index.html
@@ -59,23 +59,13 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-overlay"></div>
-        <div class="hero-content">
-            <div class="container">
-                <div class="iwa-logo-large">
-                    <div class="iwa-text">IWA</div>
-                    <div class="iwa-wave"></div>
-                    <div class="iwa-subtitle">the international<br>water association</div>
-                </div>
-                <h1 class="hero-title">2025 International Conference on Sustainable Urban Water Systems</h1>
-                <h2 class="hero-subtitle">Resilient, Inclusive & Smart Water Futures</h2>
-                <div class="hero-info">
-                    <p class="hero-date"><i class="fas fa-calendar-alt"></i> December 18-20, 2025</p>
-                    <p class="hero-location"><i class="fas fa-map-marker-alt"></i> Shanghai, China</p>
-                </div>
-                <div class="hero-buttons">
-                    <a href="registration.html" class="btn btn-primary">Register Now</a>
-                    <a href="call-for-papers.html" class="btn btn-secondary">Submit Abstract</a>
-                </div>
+    </section>
+
+    <section class="hero-cta">
+        <div class="container">
+            <div class="hero-cta-buttons">
+                <a href="registration.html" class="btn btn-light">Register Now</a>
+                <a href="call-for-papers.html" class="btn btn-outline-light">Submit Your Abstract</a>
             </div>
         </div>
     </section>
@@ -144,22 +134,22 @@
                     <div class="date-icon">
                         <i class="fas fa-file-alt"></i>
                     </div>
-                    <h3>Abstract Submission</h3>
-                    <p class="date">To be announced</p>
+                    <h3>Abstract Submission Opens</h3>
+                    <p class="date">November 14, 2025</p>
                 </div>
                 <div class="date-card">
                     <div class="date-icon">
                         <i class="fas fa-check-circle"></i>
                     </div>
-                    <h3>Notification of Acceptance</h3>
-                    <p class="date">To be announced</p>
+                    <h3>Abstract Submission Closes</h3>
+                    <p class="date">November 30, 2025</p>
                 </div>
                 <div class="date-card">
                     <div class="date-icon">
                         <i class="fas fa-user-check"></i>
                     </div>
-                    <h3>Early Registration Deadline</h3>
-                    <p class="date">To be announced</p>
+                    <h3>Notification of Acceptance</h3>
+                    <p class="date">December 7, 2025</p>
                 </div>
                 <div class="date-card highlight">
                     <div class="date-icon">
@@ -270,18 +260,6 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="cta-section">
-        <div class="container">
-            <div class="cta-content">
-                <h2>Join Us in Shanghai</h2>
-                <p>Be part of the global conversation on sustainable urban water systems</p>
-                <div class="cta-buttons">
-                    <a href="registration.html" class="btn btn-light">Register Now</a>
-                    <a href="call-for-papers.html" class="btn btn-outline-light">Submit Your Abstract</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer -->
     <footer class="footer">
