--- a/register.html
+++ b/register.html
@@ -79,6 +79,18 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="idNumber">ID Number <span class="required">*</span></label>
+                    <input
+                        type="text"
+                        id="idNumber"
+                        name="idNumber"
+                        class="form-input"
+                        placeholder="ID Number"
+                        required
+                    >
+                </div>
+
+                <div class="form-group">
                     <label for="organization">Organization <span class="required">*</span></label>
                     <input 
                         type="text" 
@@ -153,6 +165,7 @@
             const password = document.getElementById('password').value;
             const confirmPassword = document.getElementById('confirmPassword').value;
             const name = document.getElementById('name').value.trim();
+            const idNumber = document.getElementById('idNumber').value.trim();
             const organization = document.getElementById('organization').value.trim();
             
             // 客户端验证
@@ -163,6 +176,11 @@
 
             if (password.length < 6) {
                 showError('Password must be at least 6 characters long!');
+                return;
+            }
+
+            if (!idNumber) {
+                showError('ID Number is required!');
                 return;
             }
 
@@ -189,6 +207,7 @@
                         username,
                         password,
                         name,
+                        idNumber,
                         organization
                     })
                 });
