--- a/admin/users.html
+++ b/admin/users.html
@@ -1002,8 +1002,8 @@
                     <div class="details-item"><strong>Affiliation</strong><span id="cmAff">-</span></div>
                     <div class="details-item" style="grid-column: span 2;"><strong>Topic</strong><span id="cmTopic">-</span></div>
                     <div class="details-item" style="grid-column: 1 / -1;"><strong>Abstract</strong><span id="cmAbstractText">-</span></div>
-                    <div class="details-item"><strong>Keywords</strong><span id="cmKeywords">-</span></div>
-                    <div class="details-item" style="grid-column: span 2;"><strong>File</strong>
+                    <div class="details-item" style="grid-column: 1 / -1;"><strong>Keywords</strong><span id="cmKeywords">-</span></div>
+                    <div class="details-item" style="grid-column: 1 / -1;"><strong>File</strong>
                         <span id="cmFile"><span id="cmFileName">-</span></span>
                     </div>
                 </div>
