--- a/profile.html
+++ b/profile.html
@@ -432,7 +432,7 @@
                     <div class="bank-section">
                         <h3 class="bank-section-title">
                             <i class="fas fa-university"></i>
-                            Registration Fees - Bank Transfer Information
+                            Registration Fees - Payment Information
                         </h3>
 
                         <!-- Bank Transfer Information - Mainland China -->
@@ -484,6 +484,10 @@
                                     <p>50131000554304288</p>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="bank-info payment-qr">
+                            <img src="images/payment_qr.png" alt="Scan to pay - Shanghai Good Culture Media Co., Ltd.">
                         </div>
                     </div>
 
