--- a/profile.html
+++ b/profile.html
@@ -434,6 +434,10 @@
                             <i class="fas fa-university"></i>
                             Registration Fees - Payment Information
                         </h3>
+                        <p class="bank-note">
+                            <i class="fas fa-exclamation-circle" aria-hidden="true"></i>
+                            <span>REQUIRED: Payment Note = Full Name + Company/Organization</span>
+                        </p>
 
                         <!-- Bank Transfer Information - Mainland China -->
                         <div class="bank-info">
