--- a/admin/users.html
+++ b/admin/users.html
@@ -1072,7 +1072,7 @@
 
                 <div class="modal-footer-actions">
                     <button id="cmDownloadBtn" class="btn btn-success btn-sm" onclick="downloadCMFile()" disabled><i class="fas fa-download"></i> Download File</button>
-                    <button class="btn btn-export-pdf btn-sm" onclick="exportCMToPDF()"><i class="fas fa-file-pdf"></i> Export PDF</button>
+                    <button id="exportCMPdfBtn" class="btn btn-export-pdf btn-sm" onclick="exportCMToPDF()"><i class="fas fa-file-pdf"></i> Export PDF</button>
                     <button id="exportCMExcelBtn" class="btn btn-export-excel btn-sm" onclick="exportCMToExcel()"><i class="fas fa-file-excel"></i> Export Excel</button>
                 </div>
             </div>
